Fixed tag on authentication endpoints. Moved then under authentication to match up with authn. Added in scopr testing
