# pkg/client/api/openapi.yaml
@@ -12,6 +12,98 @@ servers:
 - description: Internal address of service
   url: https://identity.srvs.moov.local/
 paths:
+  /authentication/authenticated:
+    get:
+      operationId: Authenticated
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LoggedIn'
+          description: User successfully logged in.
+        "404":
+          content:
+            text/plain:
+              schema:
+                maxLength: 0
+                pattern: //i
+                type: string
+          description: Empty response for unauthorized or any other returned http
+            status code
+        default:
+          content:
+            text/plain:
+              schema:
+                maxLength: 0
+                pattern: //i
+                type: string
+          description: Empty response for unauthorized or any other returned http
+            status code
+      security:
+      - LoginAuth: []
+      summary: |
+        Complete a login via a OIDC.
+        Once the OIDC client service has authenticated their identity the client service redirect to this endpoint.
+      tags:
+      - authentication
+  /authentication/register:
+    get:
+      operationId: Register
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Register'
+          description: User successfully registered, they can now log in
+        default:
+          content:
+            text/plain:
+              schema:
+                maxLength: 0
+                pattern: //i
+                type: string
+          description: Empty response for unauthorized or any other returned http
+            status code
+      security:
+      - LoginAuth: []
+      summary: |
+        Returns the partially completed registration details that were pulled by AuthN service.
+      tags:
+      - authentication
+    post:
+      operationId: RegisterWithCredentials
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Register'
+        description: Arguments needed register a user with OIDC credentials.
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LoggedIn'
+          description: User successfully registered, they can now log in
+        default:
+          content:
+            text/plain:
+              schema:
+                maxLength: 0
+                pattern: //i
+                type: string
+          description: Empty response for unauthorized or any other returned http
+            status code
+      security:
+      - LoginAuth: []
+      summary: "Called when the user is registering for the first time. It requires\
+        \ that they have authenticated with a \nsupported OIDC provider and recieved\
+        \ a valid invite code.\n"
+      tags:
+      - authentication
   /invites:
     get:
       operationId: ListInvites
@@ -115,98 +207,6 @@ paths:
       summary: Delete an invite that was sent and invalidate the token.
       tags:
       - invites
-  /authenticated:
-    get:
-      operationId: Authenticated
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/LoggedIn'
-          description: User successfully logged in.
-        "404":
-          content:
-            text/plain:
-              schema:
-                maxLength: 0
-                pattern: //i
-                type: string
-          description: Empty response for unauthorized or any other returned http
-            status code
-        default:
-          content:
-            text/plain:
-              schema:
-                maxLength: 0
-                pattern: //i
-                type: string
-          description: Empty response for unauthorized or any other returned http
-            status code
-      security:
-      - LoginAuth: []
-      summary: |
-        Complete a login via a OIDC.
-        Once the OIDC client service has authenticated their identity the client service redirect to this endpoint.
-      tags:
-      - internal
-  /register:
-    get:
-      operationId: Register
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Register'
-          description: User successfully registered, they can now log in
-        default:
-          content:
-            text/plain:
-              schema:
-                maxLength: 0
-                pattern: //i
-                type: string
-          description: Empty response for unauthorized or any other returned http
-            status code
-      security:
-      - LoginAuth: []
-      summary: |
-        Returns the partially completed registration details that were pulled by AuthN service.
-      tags:
-      - internal
-    post:
-      operationId: RegisterWithCredentials
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Register'
-        description: Arguments needed register a user with OIDC credentials.
-        required: true
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/LoggedIn'
-          description: User successfully registered, they can now log in
-        default:
-          content:
-            text/plain:
-              schema:
-                maxLength: 0
-                pattern: //i
-                type: string
-          description: Empty response for unauthorized or any other returned http
-            status code
-      security:
-      - LoginAuth: []
-      summary: "Called when the user is registering for the first time. It requires\
-        \ that they have authenticated with a \nsupported OIDC provider and recieved\
-        \ a valid invite code.\n"
-      tags:
-      - internal
   /identities:
     get:
       operationId: ListIdentities
